SampleApp_25cG_C/SDK/CMMISDK_Api.h

	error_km KMAPI CMMISDK_Connect(const CMMISDK_Port* inPortInfo, int32_km* outInstrumentNo);
	error_km KMAPI CMMISDK_SetTargetDataColor(int32_km inInstrumentNo, CMMISDK_DataType inDataType, int32_km inNum, const CMMISDK_ColorCond *inCond, const CMMISDK_Data* inData);
	error_km KMAPI CMMISDK_GetTargetDataColor(int32_km inInstrumentNo, CMMISDK_DataType inDataType, int32_km inNum, CMMISDK_ColorCond *outCond, CMMISDK_Data* outData);
	error_km KMAPI CMMISDK_GetTargetData(int32_km inInstrumentNo, CMMISDK_DataType inDataType, CMMISDK_Data* outData);
	error_km KMAPI CMMISDK_SetToleranceForTarget(int32_km inInstrumentNo, CMMISDK_ToleranceType inType, int32_km inObsIll, CMMISDK_ToleranceId inId, const CMMISDK_ToleranceData* inTolerance);
	error_km KMAPI CMMISDK_GetToleranceForTarget(int32_km inInstrumentNo, CMMISDK_ToleranceType inType, int32_km inObsIll, CMMISDK_ToleranceId inId, CMMISDK_ToleranceData* outTolerance);
	error_km KMAPI CMMISDK_SetParametricForTarget(int32_km inInstrumentNo, CMMISDK_ToleranceType inType, CMMISDK_ParametricId inId, const CMMISDK_ParametricCoef* inParametric);
	error_km KMAPI CMMISDK_GetParametricForTarget(int32_km inInstrumentNo, CMMISDK_ToleranceType inType, CMMISDK_ParametricId inId, CMMISDK_ParametricCoef* outParametric);
	error_km KMAPI CMMISDK_SetTargetFilter(int32_km inInstrumentNo, CMMISDK_FilterIndex inIndex, const CMMISDK_GroupList* inGroup);
	error_km KMAPI CMMISDK_GetTargetFilter(int32_km inInstrumentNo, CMMISDK_FilterIndex* outIndex, CMMISDK_GroupList* outGroup);
	error_km KMAPI CMMISDK_SetTargetProtect(int32_km inInstrumentNo, CMMISDK_OnOff inProtect);
	error_km KMAPI CMMISDK_GetTargetProtect(int32_km inInstrumentNo, CMMISDK_OnOff* outProtect);
	error_km KMAPI CMMISDK_GetSavedSampleCount(int32_km inInstrumentNo, int32_km* outCount);
	error_km KMAPI CMMISDK_DeleteSampleData(int32_km inInstrumentNo, int32_km inNum);
	error_km KMAPI CMMISDK_DeleteAllSampleData(int32_km inInstrumentNo);
	error_km KMAPI CMMISDK_LoadSampleInfo(int32_km inInstrumentNo, int32_km inNum);
	error_km KMAPI CMMISDK_GetSampleProperty(int32_km inInstrumentNo, CMMISDK_SampleProperty* outProperty);
	error_km KMAPI CMMISDK_GetSampleData(int32_km inInstrumentNo, CMMISDK_DataType inDataType, CMMISDK_Data* outData);
	error_km KMAPI CMMISDK_SetActiveGroup(int32_km inInstrumentNo, const CMMISDK_GroupList* inGroup);
	error_km KMAPI CMMISDK_GetActiveGroup(int32_km inInstrumentNo, CMMISDK_GroupList* outGroup);
	error_km KMAPI CMMISDK_SetGroupName(int32_km inInstrumentNo, int32_km inGroup, const CMMISDK_Group* inName);
	error_km KMAPI CMMISDK_GetGroupName(int32_km inInstrumentNo, int32_km inGroup, CMMISDK_Group* outName);
	error_km KMAPI CMMISDK_SetMultipleGroupName(int32_km inInstrumentNo, const CMMISDK_GroupAll* inName);
	error_km KMAPI CMMISDK_GetMultipleGroupName(int32_km inInstrumentNo, CMMISDK_GroupAll* outName);
	error_km KMAPI CMMISDK_LoadDefaultInfo(int32_km inInstrumentNo);
	error_km KMAPI CMMISDK_SaveDefaultInfo(int32_km inInstrumentNo);
	error_km KMAPI CMMISDK_SetTolerance(int32_km inInstrumentNo, CMMISDK_ToleranceType inType, int32_km inObsIll, CMMISDK_ToleranceId inId, const CMMISDK_ToleranceData* inTolerance);
	error_km KMAPI CMMISDK_GetTolerance(int32_km inInstrumentNo, CMMISDK_ToleranceType inType, int32_km inObsIll, CMMISDK_ToleranceId inId, CMMISDK_ToleranceData* outTolerance);
	error_km KMAPI CMMISDK_SetParametric(int32_km inInstrumentNo, CMMISDK_ToleranceType inType, CMMISDK_ParametricId inId, const CMMISDK_ParametricCoef* inParametric);
	error_km KMAPI CMMISDK_GetParametric(int32_km inInstrumentNo, CMMISDK_ToleranceType inType, CMMISDK_ParametricId inId, CMMISDK_ParametricCoef* outParametric);
	error_km KMAPI CMMISDK_SetWarningLevel(int32_km inInstrumentNo, int32_km inLevel);
	error_km KMAPI CMMISDK_GetWarningLevel(int32_km inInstrumentNo, int32_km* outLevel);
	error_km KMAPI CMMISDK_SetInstrumentMode(int32_km inInstrumentNo, CMMISDK_InstrumentMode inMode);
	error_km KMAPI CMMISDK_GetInstrumentMode(int32_km inInstrumentNo, CMMISDK_InstrumentMode* outMode);
	error_km KMAPI CMMISDK_SetUserType(int32_km inInstrumentNo, CMMISDK_UserType inType);
	error_km KMAPI CMMISDK_GetUserType(int32_km inInstrumentNo, CMMISDK_UserType* outType);
	error_km KMAPI CMMISDK_SetAdminPassword(int32_km inInstrumentNo, const CMMISDK_AdminPass *inPass);
	error_km KMAPI CMMISDK_GetAdminPassword(int32_km inInstrumentNo, CMMISDK_AdminPass* outPass);
	error_km KMAPI CMMISDK_SetAutoPrint(int32_km inInstrumentNo, CMMISDK_OnOff inPrint);
	error_km KMAPI CMMISDK_GetAutoPrint(int32_km inInstrumentNo, CMMISDK_OnOff* outPrint);
	error_km KMAPI CMMISDK_SetBrightness(int32_km inInstrumentNo, int32_km inBrightness);
	error_km KMAPI CMMISDK_GetBrightness(int32_km inInstrumentNo, int32_km* outBrightness);
	error_km KMAPI CMMISDK_SetScreenDirection(int32_km inInstrumentNo, CMMISDK_ScreenDirection inScreenDirection);
	error_km KMAPI CMMISDK_GetScreenDirection(int32_km inInstrumentNo, CMMISDK_ScreenDirection* outScreenDirection);
	error_km KMAPI CMMISDK_SetSound(int32_km inInstrumentNo, CMMISDK_OnOff inSound);
	error_km KMAPI CMMISDK_GetSound(int32_km inInstrumentNo, CMMISDK_OnOff* outSound);
	error_km KMAPI CMMISDK_SetCalibrationInterval(int32_km inInstrumentNo, int32_km inInterval);
	error_km KMAPI CMMISDK_GetCalibrationInterval(int32_km inInstrumentNo, int32_km* outInterval);
	error_km KMAPI CMMISDK_SetAnnualCalibration(int32_km inInstrumentNo, CMMISDK_OnOff inCal);
	error_km KMAPI CMMISDK_GetAnnualCalibration(int32_km inInstrumentNo, CMMISDK_OnOff* outCal);
	error_km KMAPI CMMISDK_SetZeroCalibrationSkip(int32_km inInstrumentNo, CMMISDK_OnOff inSkip);
	error_km KMAPI CMMISDK_GetZeroCalibrationSkip(int32_km inInstrumentNo, CMMISDK_OnOff* outSkip);
	error_km KMAPI CMMISDK_SetDateTime(int32_km inInstrumentNo, const CMMISDK_DateTime *inDate);
	error_km KMAPI CMMISDK_SetDateFormat(int32_km inInstrumentNo, CMMISDK_DateFormat inFormat);
	error_km KMAPI CMMISDK_GetDateFormat(int32_km inInstrumentNo, CMMISDK_DateFormat* outFormat);
	error_km KMAPI CMMISDK_SetLanguage(int32_km inInstrumentNo, CMMISDK_Language inLanguage);
	error_km KMAPI CMMISDK_GetLanguage(int32_km inInstrumentNo, CMMISDK_Language* outLanguage);
	error_km KMAPI CMMISDK_SetPowerSaving(int32_km inInstrumentNo, int32_km inPowerSaving);
	error_km KMAPI CMMISDK_GetPowerSaving(int32_km inInstrumentNo, int32_km* outPowerSaving);
	error_km KMAPI CMMISDK_ClearJobInfo(int32_km inInstrumentNo, int32_km inJobNum);
	error_km KMAPI CMMISDK_SetJobInfo(int32_km inInstrumentNo, int32_km inJobNum, const CMMISDK_JobInfo* inInfo);
	error_km KMAPI CMMISDK_GetJobInfo(int32_km inInstrumentNo, int32_km inJobNum, CMMISDK_JobInfo* outInfo);
	error_km KMAPI CMMISDK_GetJobStepType(int32_km inInstrumentNo, int32_km inJobNum, int32_km inStepNum, CMMISDK_JobStepType* outType);
	error_km KMAPI CMMISDK_SetJobStepForOperation(int32_km inInstrumentNo, int32_km inJobNum, int32_km inStepNum, const CMMISDK_JobStepOperation* inOperation);
	error_km KMAPI CMMISDK_GetJobStepForOperation(int32_km inInstrumentNo, int32_km inJobNum, int32_km inStepNum, CMMISDK_JobStepOperation* outOperation);
	error_km KMAPI CMMISDK_SetJobStepForResult(int32_km inInstrumentNo, int32_km inJobNum, int32_km inStepNum, const CMMISDK_JobStepResult* inResult);
	error_km KMAPI CMMISDK_GetJobStepForResult(int32_km inInstrumentNo, int32_km inJobNum, int32_km inStepNum, CMMISDK_JobStepResult* outResult);
	error_km KMAPI CMMISDK_SetJobImage(int32_km inInstrumentNo, int32_km inJobNum, int32_km inImageNum, const CMMISDK_JobImage* inImage);
	error_km KMAPI CMMISDK_GetJobImage(int32_km inInstrumentNo, int32_km inJobNum, int32_km inImageNum, CMMISDK_JobImage* outImage);
	error_km KMAPI CMMISDK_ResetSetting(int32_km inInstrumentNo);
	error_km KMAPI CMMISDK_ResetSettingAndData(int32_km inInstrumentNo);