SDK/CMMISDK_Parameters.h

//COM port information
struct CMMISDK_Port
{
	char   port_name[SIZE_PORTNAME];	//COM port name
};
//Measurement data
struct CMMISDK_Data
{
	float64_km   data[SIZE_DATA];	//Data
};
//Color value calculation conditions
struct CMMISDK_ColorCond
{
	CMMISDK_Observer	obs;			//Observer
	CMMISDK_Illuminant	ill;			//Illuminant
	CMMISDK_ColorSpace	colorSpace;		//Color space
										//	*A value other than COLOR_MUNSELL_C can be specified with CMMISDK_ReadLatestDataColor.
										//	*Only L*a*b*, Hunter Lab, and XYZ can be specified with CMMISDK_SetTargetDataColor and CMMISDK_GetTargetDataColor.
};
//Tolerance data
struct CMMISDK_ToleranceData
{
	int32_km  upper_enable;	//Upper limit enable/disable (0: disable, 1: enable)
	int32_km  upper_value;	//Upper limit (Value multiplied by 100. However, only x・y is a value multiplied by 10000.)
	int32_km  lower_enable;	//Lower limit enable/disable (0: disable, 1: enable)
	int32_km  lower_value;	//Lower limit (Value multiplied by 100. However, only x・y is a value multiplied by 10000.)
};
//Parametric coefficient data
struct CMMISDK_ParametricCoef
{
	float64_km  coef[SIZE_PARAMETRIC_COEF];	//Parametric coefficient
};
//Measurement value properties
struct CMMISDK_SampleProperty
{
	int32_km                   date[SIZE_DATE];		//Measurement (registration) date/time
													//	Values are stored in the array in year/month/day/hours/minutes/seconds order.
	CMMISDK_MeasType           meas_type;			//Measurement method
	CMMISDK_MeasMode           meas_mode;			//Measurement mode
	CMMISDK_MeasArea           meas_area;			//Measurement area
	CMMISDK_MeasAngle          meas_angle;			//Measurement angle
	CMMISDK_LightDirection     meas_ldirection;		//Irradiation direction
	CMMISDK_SpecularComponent  meas_scie;			//Specular component
	CMMISDK_Uv                 meas_uv;				//UV condition
	CMMISDK_Warning            warning;				//Warning information
													//	0x01	Voltage drop 
													//	0x02	Calibration recommended
													//	0x04	Xe lamp deterioration
													//	0x08	LED lamp deterioration
													//	0x10	Reflectance outside of measurable range
													//	0x20	Gloss outside of measurable range
	int32_km                   diagnosis;			//Diagnosis information
													//	0x01	Repeatability Status: Red
													//	0x02	Repeatability Status: Yellow
													//	0x04	Reproducibility Status: Red
													//	0x08	Reproducibility Status: Yellow
													//	0x10	Intensity Status: Red
													//	0x20	Intensity Status: Yellow
	CMMISDK_DataAttr           data_attr;			//Data attribute
	int32_km                   relation_target;		//Related target number
	char                       name[SIZE_DATANAME];	//Data name
													//	*The size is 64 bytes, but the character length depends on the instrument capabilities.
};
//Date and time data
struct CMMISDK_DateTime
{
	int32_km     year;		//Year
	int32_km     month;		//Month
	int32_km     day;		//Day
	int32_km     hour;		//Hour
	int32_km     minute;	//Minute
	int32_km     second;	//Second
};
//Group list
struct CMMISDK_GroupList
{
	int32_km   group[SIZE_GROUP];	//Group list
};
//Group information
struct CMMISDK_Group
{
	char   name[SIZE_GROUP_NAME];	//Name
};
//All group information
struct CMMISDK_GroupAll
{
	char   name[SIZE_GROUP_ALL][SIZE_GROUP_NAME];	//Name
};
//Administrator password
struct CMMISDK_AdminPass
{
	char   password[SIZE_ADMIN_PASS];	//Administrator password
};
//Job information
struct CMMISDK_JobInfo
{
	int32_km		step_count;				//Number of steps to register for job
	CMMISDK_OnOff	step_loop;				//Repeat job on/off
	char			name[SIZE_JOB_NAME];	//Name
};


//Job operation step
struct CMMISDK_JobStepOperation
{
	int32_km					image_num;					//Image number
	CMMISDK_MeasType			meas_type;					//Measurement type
	CMMISDK_MeasMode			meas_mode;					//Measurement mode
	CMMISDK_MeasArea			meas_area;					//Measurement area
	CMMISDK_MeasAngle			meas_angle;					//Measurement angle
	CMMISDK_LightDirection		meas_ldirection;			//Irradiation direction
	CMMISDK_SpecularComponent	meas_scie;					//Specular component
	CMMISDK_Uv					meas_uv;					//UV condition
	int32_km					auto_ave_times;				//Auto average count
	int32_km					manu_ave_times;				//Manual average count
	int32_km					relation_target;			//Related target number
	CMMISDK_OnOff				enable_meas;				//Display measurement button on/off
	CMMISDK_OnOff				enable_prev;				//Display previous button on/off
	CMMISDK_OnOff				enable_next;				//Display next button on/off
	CMMISDK_OnOff				enable_end;					//Display end button on/off
	char						name[SIZE_DATANAME];		//Name
	char						comment[SIZE_JOB_COMMENT];	//Comment
};


//Job result step
struct CMMISDK_JobStepResult
{
	CMMISDK_SpecularComponent	meas_scie;				//Specular component
	CMMISDK_Observer			obs1;					//Observer 1
	CMMISDK_Observer			obs2;					//Observer 2
	CMMISDK_Illuminant			ill1;					//Illuminant 1
	CMMISDK_Illuminant			ill2;					//Illuminant 2
	CMMISDK_CustomIndex			index[SIZE_JOB_INDEX];	//Custom items
	CMMISDK_OnOff				enable_meas;			//Display measurement button on/off
	CMMISDK_OnOff				enable_prev;			//Display previous button on/off
	CMMISDK_OnOff				enable_next;			//Display next button on/off
	CMMISDK_OnOff				enable_end;				//Display end button on/off
};