SampleApp_25cG_CS_C/SampleApp/SDK/CMMISDK_API.cs

        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_SetTargetDataColor(Int32 inInstrumentNo, CMMISDK_DataType inDataType, Int32 inNum, ref CMMISDK_ColorCond inCond, ref CMMISDK_Data inData);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_GetTargetDataColor(Int32 inInstrumentNo, CMMISDK_DataType inDataType, Int32 inNum, ref CMMISDK_ColorCond outCond, ref CMMISDK_Data outData);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_GetTargetData(Int32 inInstrumentNo, CMMISDK_DataType inDataType, ref CMMISDK_Data outData);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_SetToleranceForTarget(Int32 inInstrumentNo, CMMISDK_ToleranceType inType, Int32 inObsIll, CMMISDK_ToleranceId inId, ref CMMISDK_ToleranceData inTolerance);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_GetToleranceForTarget(Int32 inInstrumentNo, CMMISDK_ToleranceType inType, Int32 inObsIll, CMMISDK_ToleranceId inId, ref CMMISDK_ToleranceData outTolerance);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_SetParametricForTarget(Int32 inInstrumentNo, CMMISDK_ToleranceType inType, CMMISDK_ParametricId inId, ref CMMISDK_ParametricCoef inParametric);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_GetParametricForTarget(Int32 inInstrumentNo, CMMISDK_ToleranceType inType, CMMISDK_ParametricId inId, ref CMMISDK_ParametricCoef outParametric);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_SetTargetFilter(Int32 inInstrumentNo, CMMISDK_FilterIndex inIndex, ref CMMISDK_GroupList inGroup);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_GetTargetFilter(Int32 inInstrumentNo, ref CMMISDK_FilterIndex outIndex, ref CMMISDK_GroupList outGroup);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_SetTargetProtect(Int32 inInstrumentNo, CMMISDK_OnOff inProtect);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_GetTargetProtect(Int32 inInstrumentNo, ref CMMISDK_OnOff outProtect);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_GetSavedSampleCount(Int32 inInstrumentNo, ref Int32 outCount);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_DeleteSampleData(Int32 inInstrumentNo, Int32 inNum);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_DeleteAllSampleData(Int32 inInstrumentNo);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_LoadSampleInfo(Int32 inInstrumentNo, Int32 inNum);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_GetSampleProperty(Int32 inInstrumentNo, ref CMMISDK_SampleProperty outProperty);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_GetSampleData(Int32 inInstrumentNo, CMMISDK_DataType inDataType, ref CMMISDK_Data outData);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_SetActiveGroup(Int32 inInstrumentNo, ref CMMISDK_GroupList inGroup);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_GetActiveGroup(Int32 inInstrumentNo, ref CMMISDK_GroupList outGroup);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_SetGroupName(Int32 inInstrumentNo, Int32 inGroup, ref CMMISDK_Group inName);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_GetGroupName(Int32 inInstrumentNo, Int32 inGroup, ref CMMISDK_Group outName);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_SetMultipleGroupName(Int32 inInstrumentNo, ref CMMISDK_GroupAll inName);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_GetMultipleGroupName(Int32 inInstrumentNo, ref CMMISDK_GroupAll outName);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_LoadDefaultInfo(Int32 inInstrumentNo);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_SaveDefaultInfo(Int32 inInstrumentNo);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_SetTolerance(Int32 inInstrumentNo, CMMISDK_ToleranceType inType, Int32 inObsIll, CMMISDK_ToleranceId inId, ref CMMISDK_ToleranceData inTolerance);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_GetTolerance(Int32 inInstrumentNo, CMMISDK_ToleranceType inType, Int32 inObsIll, CMMISDK_ToleranceId inId, ref CMMISDK_ToleranceData outTolerance);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_SetParametric(Int32 inInstrumentNo, CMMISDK_ToleranceType inType, CMMISDK_ParametricId inId, ref CMMISDK_ParametricCoef inParametric);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_GetParametric(Int32 inInstrumentNo, CMMISDK_ToleranceType inType, CMMISDK_ParametricId inId, ref CMMISDK_ParametricCoef outParametric);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_SetWarningLevel(Int32 inInstrumentNo, Int32 inLevel);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_GetWarningLevel(Int32 inInstrumentNo, ref Int32 outLevel);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_SetInstrumentMode(Int32 inInstrumentNo, CMMISDK_InstrumentMode inMode);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_GetInstrumentMode(Int32 inInstrumentNo, ref CMMISDK_InstrumentMode outMode);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_SetUserType(Int32 inInstrumentNo, CMMISDK_UserType inType);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_GetUserType(Int32 inInstrumentNo, ref CMMISDK_UserType outType);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_SetAdminPassword(Int32 inInstrumentNo, ref CMMISDK_AdminPass inPass);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_GetAdminPassword(Int32 inInstrumentNo, ref CMMISDK_AdminPass outPass);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_SetAutoPrint(Int32 inInstrumentNo, CMMISDK_OnOff inPrint);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_GetAutoPrint(Int32 inInstrumentNo, ref CMMISDK_OnOff outPrint);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_SetBrightness(Int32 inInstrumentNo, Int32 inBrightness);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_GetBrightness(Int32 inInstrumentNo, ref Int32 outBrightness);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_SetScreenDirection(Int32 inInstrumentNo, CMMISDK_ScreenDirection inScreenDirection);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_GetScreenDirection(Int32 inInstrumentNo, ref CMMISDK_ScreenDirection outScreenDirection);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_SetSound(Int32 inInstrumentNo, CMMISDK_OnOff inSound);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_GetSound(Int32 inInstrumentNo, ref CMMISDK_OnOff outSound);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_SetCalibrationInterval(Int32 inInstrumentNo, Int32 inInterval);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_GetCalibrationInterval(Int32 inInstrumentNo, ref Int32 outInterval);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_SetAnnualCalibration(Int32 inInstrumentNo, CMMISDK_OnOff inCal);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_GetAnnualCalibration(Int32 inInstrumentNo, ref CMMISDK_OnOff outCal);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_SetZeroCalibrationSkip(Int32 inInstrumentNo, CMMISDK_OnOff inSkip);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_GetZeroCalibrationSkip(Int32 inInstrumentNo, ref CMMISDK_OnOff outSkip);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_SetDateTime(Int32 inInstrumentNo, ref CMMISDK_DateTime inDate);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_SetDateFormat(Int32 inInstrumentNo, CMMISDK_DateFormat inFormat);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_GetDateFormat(Int32 inInstrumentNo, ref CMMISDK_DateFormat outFormat);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_SetLanguage(Int32 inInstrumentNo, CMMISDK_Language inLanguage);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_GetLanguage(Int32 inInstrumentNo, ref CMMISDK_Language outLanguage);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_SetPowerSaving(Int32 inInstrumentNo, Int32 inPowerSaving);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_GetPowerSaving(Int32 inInstrumentNo, ref Int32 outPowerSaving);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_ClearJobInfo(Int32 inInstrumentNo, Int32 inJobNum);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_SetJobInfo(Int32 inInstrumentNo, Int32 inJobNum, ref CMMISDK_JobInfo inInfo);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_GetJobInfo(Int32 inInstrumentNo, Int32 inJobNum, ref CMMISDK_JobInfo outInfo);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_GetJobStepType(Int32 inInstrumentNo, Int32 inJobNum, Int32 inStepNum, ref CMMISDK_JobStepType outType);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_SetJobStepForOperation(Int32 inInstrumentNo, Int32 inJobNum, Int32 inStepNum, ref CMMISDK_JobStepOperation inOperation);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_GetJobStepForOperation(Int32 inInstrumentNo, Int32 inJobNum, Int32 inStepNum, ref CMMISDK_JobStepOperation outOperation);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_SetJobStepForResult(Int32 inInstrumentNo, Int32 inJobNum, Int32 inStepNum, ref CMMISDK_JobStepResult inResult);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_GetJobStepForResult(Int32 inInstrumentNo, Int32 inJobNum, Int32 inStepNum, ref CMMISDK_JobStepResult outResult);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_SetJobImage(Int32 inInstrumentNo, Int32 inJobNum, Int32 inImageNum, IntPtr inImage);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_GetJobImage(Int32 inInstrumentNo, Int32 inJobNum, Int32 inImageNum, IntPtr outImage);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_ResetSetting(Int32 inInstrumentNo);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_ResetSettingAndData(Int32 inInstrumentNo);
    }
    class CMMISDK_API
    {
        public static Int32 CMMISDK_Connect(ref CMMISDK_Port inPortInfo, ref Int32 outInstrumentNo)
        {
            return Environment.Is64BitProcess ?
                CMMISDK_API_x64.CMMISDK_Connect(ref inPortInfo, ref outInstrumentNo) :
                CMMISDK_API_x86.CMMISDK_Connect(ref inPortInfo, ref outInstrumentNo);
        }
